plugins {
  id 'application'
  id 'java'
  id 'eclipse'
  id 'org.openjfx.javafxplugin' version '0.1.0'
  id 'com.gradleup.shadow' version '9.1.0'
}

repositories {
  mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

javafx {
  version = '17.0.16'
  modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
  mainClass = 'main.Main'
}

jar {
  manifest {
    attributes(
      'Main-Class': application.mainClass
    )
  }
}

run {
  jvmArgs = ['--add-modules', 'javafx.controls,javafx.fxml']
}
